--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.27.0",
-    "jsonwebtoken": "^9.0.3",
+    "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
     "mongoose": "^9.1.4",
     "next": "16.1.3",
@@ -27,7 +27,6 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^3.0.0",
-    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
