--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "recharts": "^3.7.0",
+    "swr": "^2.4.0",
     "tailwind-merge": "^3.4.0",
     "web-push": "^3.6.7",
     "zod": "^4.3.5"
